examples/test/testpolicy15965.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15965
  namespace: namespace141
spec:
  podSelector:
    matchLabels:
      key0: value39
      key31: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value33
          key6: value25
      podSelector:
        matchLabels:
          key12: value42
          key7: value31
